# picsar

./: .gitignore  .lgtm.yml  CONTRIBUTING.md  Dockerfile  Documentation.html  Field.py  INSTALL_FORTRAN.md  INSTALL_PYTHON.md  Makefile  Makefile_Forthon  Makefile_Forthon.in  Makefile_GPU  Makefile_debug  Makefile_profiling  PyLoadArrayPicsar.py  README.md  README_PYTHON.md  boundary.F90  configure  control_file.F90  current_deposition.F90  diags.F90  field_gathering.F90  input_file.pixr  license.txt  main.F90  maxwell.F90  modules.F90  mpi_derived_types.F90  mpi_routines.F90  mpi_subtype_control.F90  particles_push.F90  plot_field_picsar.py  setup.py  shippable.yml  simple_io.F90  submain.F90  test.cpp  tiling.F90  vincenti@edison.nersc.gov  (+1 more)
QED_module_test/: CMakeLists.txt  README  companion_notebook.ipynb
QED_module_test/.ipynb_checkpoints/: companion_notebook-checkpoint.ipynb
QED_module_test/multi_physics/: CMakeLists.txt  chi_calc_functions.cpp  chi_calc_functions.h  commons.h  landau_lifshitz.cpp  landau_lifshitz.h  modified_bessel_functions.cpp  modified_bessel_functions.h  nonlin_breit_wheeler_engine.cpp  nonlin_breit_wheeler_engine.h  structure.md
QED_module_test/multi_physics/src/: chi_calc_functions.h  commons.h  lookup_table.hpp  main.cpp  modified_bessel_functions.cpp  modified_bessel_functions.h  nonlin_breit_wheeler_engine.cpp  nonlin_breit_wheeler_engine.h  quadrature.cpp  quadrature.h  rng_wrapper.cpp  rng_wrapper.h  special_functions.cpp  special_functions.h
QED_module_test/src/: commons.h  electrons.cpp  leptons.cpp  leptons.h  main.cpp  photons.cpp  photons.h  positrons.cpp  positrons.h  species.cpp  species.h
multi_physics/QED/: CMakeLists.txt  README
multi_physics/QED/QED_table_generator/: CMakeLists.txt  table_generator.cpp  table_inspector.ipynb
multi_physics/QED/QED_tests/: CMakeLists.txt  test_picsar_algo.cpp  test_picsar_array.cpp  test_picsar_breit_wheeler_core.cpp  test_picsar_breit_wheeler_tables.cpp  test_picsar_breit_wheeler_tables_generator.cpp  test_picsar_breit_wheeler_tabulated_functions.cpp  test_picsar_chi_functions.cpp  test_picsar_cmath_overload.cpp  test_picsar_gamma_functions.cpp  test_picsar_math_constants.cpp  test_picsar_phys_constants.cpp  test_picsar_quadrature.cpp  test_picsar_quantum_sync_core.cpp  test_picsar_quantum_sync_tables.cpp  test_picsar_quantum_sync_tables_generator.cpp  test_picsar_quantum_sync_tabulated_functions.cpp  test_picsar_schwinger_engine_core.cpp  test_picsar_serialization.cpp  test_picsar_span.cpp  test_picsar_spec_functions.cpp  test_picsar_tables.cpp  test_picsar_units.cpp  test_picsar_vec_functions.cpp  test_progress_bar.cpp
multi_physics/QED/QED_tests/validation/: validation.ipynb
multi_physics/QED/include/picsar_qed/: qed_commons.h
multi_physics/QED/kokkos_example/: CMakeLists.txt  kokkos_example.cpp  kokkos_example_breit_wheeler.cpp  kokkos_example_commons.hpp  kokkos_example_quantum_synchrotron.cpp
multi_physics/QED/python/: CMakeLists.txt  a.out  demo_python_bindings.ipynb  pxr_qed.cpp
multi_physics/QED/python_bindings/: CMakeLists.txt  demo_python_bindings.ipynb  pxr_qed.cpp
multi_physics/QED/test_gpu/: test_breit_wheeler.cu  test_quantum_sync.cu  test_schwinger.cu
src/multi_physics/: CMakeLists.txt  README  common_types.h  special_functions.hpp
src/multi_physics/QED/: CMakeLists.txt
src/multi_physics/QED/src/: NOTES  breit_wheeler_engine.hpp  chi_calc_functions.h  chi_functions.hpp  commons.h  lookup_table.hpp  lookup_tables.hpp  msg.hpp  nonlin_breit_wheeler_engine.cpp  nonlin_breit_wheeler_engine.h  picsar_array.hpp  picsar_vector.hpp  qed_commons.h  quadrature.cpp  quadrature.h  quadrature.hpp  quantum_sync_engine.hpp  rng_wrapper.cpp  rng_wrapper.h  rng_wrapper.hpp  schwinger_pair_engine.hpp  shwinger_pair_engine.hpp  special_functions.cpp  special_functions.h  special_functions.hpp  utilities.hpp  vec_functions.hpp
src/multi_physics/QED/table_generator/: CMakeLists.txt  table_generator.cpp  table_inspector.ipynb
src/multi_physics/QED_Tests/: CMakeLists.txt  companion_notebook.ipynb
src/multi_physics/QED_demos/: CMakeLists.txt  demo_BW_pair_prod_rate.cpp
src/multi_physics/QED_table_generator/: CMakeLists.txt  README  table_generator.cpp  table_inspector.ipynb
src/multi_physics/QED_tests/: CMakeLists.txt  test_breit_wheeler_engine_SI.cpp  test_breit_wheeler_engine_norm.cpp  test_chi_functions.cpp  test_chi_functions_SI.cpp  test_chi_functions_norm.cpp  test_lookup_tables.cpp  test_msg.cpp  test_picsar_algo.cpp  test_picsar_array.cpp  test_picsar_breit_wheeler_core.cpp  test_picsar_breit_wheeler_tables.cpp  test_picsar_breit_wheeler_tables_generator.cpp  test_picsar_breit_wheeler_tabulated_functions.cpp  test_picsar_chi_functions.cpp  test_picsar_cmath_overload.cpp  test_picsar_constants.cpp  test_picsar_math_constants.cpp  test_picsar_msg.cpp  test_picsar_phys_constants.cpp  test_picsar_poisson_distrib.cpp  test_picsar_quadrature.cpp  test_picsar_quantum_sync_core.cpp  test_picsar_quantum_sync_tables.cpp  test_picsar_quantum_sync_tables_generator.cpp  test_picsar_quantum_sync_tabulated_functions.cpp  test_picsar_rng_wrapper.cpp  test_picsar_schwinger_engine.cpp  test_picsar_schwinger_engine_core.cpp  test_picsar_serialization.cpp  test_picsar_span.cpp  test_picsar_spec_functions.cpp  test_picsar_tables.cpp  test_picsar_units.cpp  test_picsar_vec_functions.cpp  test_progress_bar.cpp  test_quadrature.cpp  test_quantum_sync_engine_SI.cpp  test_quantum_sync_engine_norm._pp  test_quantum_sync_engine_norm.cpp  (+3 more)
src/multi_physics/QED_tests/src/: commons.h  (+3 more)
src/multi_physics/TO_MIGRATE/: CMakeLists.txt  scr.gnu  scr2.gnu
src/multi_physics/breit_wheeler/: breit_wheeler.cpp  breit_wheeler.h  breit_wheeler_wrapper.cpp  breit_wheeler_wrapper.h  breit_wheeler_wrapper.hpp
src/multi_physics/test_cpu/: validate.cpp  validation.ipynb  validation_QS.ipynb
src/multi_physics/test_gpu/: README  main.cu  main_bw.cu  main_qs.cu  test_breit_wheeler.cu  test_quantum_sync.cu  test_schwinger.cu  validate.cu
src/multi_physics/test_program/: CMakeLists.txt  companion_notebook.ipynb
(+875 files in other folders)
